Text Overflow issue on composed comments related to lists and mentions handled

--- a/app/react/components/TextWithMentions/TextWithMentions.css
+++ b/app/react/components/TextWithMentions/TextWithMentions.css
@@ -7,11 +7,13 @@
   margin: 0 !important;
   padding: 0 !important;
   display: inline-block;
+  white-space: pre-wrap;
 }
 
 .root li {
   margin-left: 1.5em !important;
   display: inline-block;
+  white-space: pre-wrap;
 }
 
 .root p {
